<resources>
    <string name="app_name">Шумовая карта Москвы</string>
    <string name="map">Карта</string>
    <string name="shum">Шумомер</string>
    <string name="statistics">Статистика</string>
    <string name="info">Информация</string>

    <string name="turn_on">Включить</string>
    <string name="turn_off">Выключить</string>
    <string name="select_reason">Причина шума</string>

    <string name="district">Введите район</string>
    <string name="save">Сохранить</string>
    <string name="region">Регион</string>
    <string name="name">Наименование</string>

    <string name="InfoName">Инструкция по использованию приложения:</string>
    <string name="Info1">1. На первой странице отображается карта с точками шумового загрязнения, где хранятся точки из портала открытых данных г. Москвы и новые точки, добавленные пользователями. Имеется возможность посмотреть информацию о шуме при нажатии на метку шума.</string>
    <string name="Info2">2. На второй странице доступен шумомер с возможностью добавления новых точек с помощью динамика телефона. Для записи следует включить шумомер и на протяжении 5 минут вести запись в тех местах, где предполагается наибольшее шумовое загрязнение. Рекомендуется проводить измерения на расстоянии не менее 1 метра от источника шума и на высоте около 1.5 метров от земли. Пользователь должен направить микрофон устройства в сторону источника шума и избегать блокирования микрофона рукой или другими предметами, если источник не известен, то следует направить динамик в верх. После записи нужно выбрать район где была записана данная точка и прчину шума и нажать кнопку сохранения.</string>
    <string name="Info3">3. На третьей странице представлена статистика, которая показывает в процентах на сколько в определенном районе больше точек с шумовым загрязнением, чем тихих.</string>
    <string name="reason">Причина</string>
    <string name="noise_level">Шум</string>

    <string name="settings_button">Настройки</string>
    <string name="plus">Плюс</string>
    <string name="minus">Минус</string>
    <string name="back">Назад</string>
</resources>